crates/shared/libvirt-kvm/src/worker/snapshots/wt_libvirt_kvm__worker__world__tests__domain_xml_with_codex_mounts.snap
---
source: crates/shared/libvirt-kvm/src/worker/world.rs
expression: xml
---
<domain type='kvm'>
  <name>wt-0123456789abcdef0123456789abcdef</name>
  <memory unit='MiB'>4096</memory>
  <memoryBacking>
    <source type='memfd'/>
    <access mode='shared'/>
  </memoryBacking>
  <vcpu>4</vcpu>
  <os firmware='efi'>
    <type arch='x86_64' machine='q35'>hvm</type>
    <firmware><feature enabled='no' name='secure-boot'/></firmware>
  </os>
  <features><acpi/><apic/></features>
  <cpu mode='host-passthrough' check='none'/>
  <clock offset='utc'/>
  <on_poweroff>destroy</on_poweroff>
  <on_reboot>restart</on_reboot>
  <on_crash>destroy</on_crash>
  <devices>
    <disk type='file' device='disk'>
      <driver name='qemu' type='qcow2'/>
      <source file='/var/lib/libvirt/images/wt/disks/world &amp; head.qcow2'/>
      <target dev='vda' bus='virtio'/>
    </disk>
    <interface type='network'>
      <mac address='52:54:00:01:23:45'/>
      <source network='default &amp; private'/>
      <model type='virtio'/>
    </interface>
    <filesystem type='mount' accessmode='passthrough'>
      <driver type='virtiofs'/>
      <source dir='/home/wt/.codex/sessions &amp; rollouts'/>
      <target dir='wt-codex-integration-sessions'/>
    </filesystem>
    <filesystem type='mount' accessmode='passthrough'>
      <driver type='virtiofs'/>
      <source dir='/home/wt/.codex/.wt-auth'/>
      <target dir='wt-codex-integration-auth'/>
    </filesystem>
    <filesystem type='mount' accessmode='passthrough'>
      <driver type='virtiofs'/>
      <source dir='/home/wt/.ssh/.wt-authorized-keys'/>
      <target dir='wt-ssh-authorized-keys'/>
    </filesystem>
    <channel type='unix'>
      <target type='virtio' name='org.qemu.guest_agent.0'/>
    </channel>
    <vsock model='virtio'><cid auto='yes'/></vsock>
    <serial type='pty'><target port='0'/></serial>
    <console type='pty'><target type='serial' port='0'/></console>
    <rng model='virtio'><backend model='random'>/dev/urandom</backend></rng>
  </devices>
</domain>
